# UAV_Swarm_Project

./: .gitignore  CMakeLists.txt  README.md  build_sim.sh  check.sh  make_videos.py  metrics.py  model.md  run.sh  visualize.py
config/: base.json  base_single_uav.json  exp1_independent.json  exp1_independent.json:Zone.Identifier  exp2_partitioned.json  exp2_partitioned.json:Zone.Identifier  exp3_shared.json  exp4a_alpha_low.json  exp4b_alpha_high.json  exp5_independent_complex.json  exp5_partitioned_complex.json  exp5_shared_complex.json  multi_uav.json  multi_uav_shared.json  shared.json
main/: main.cpp
main/include/: uav_search_cell.hpp  uav_search_cell.hpp:Zone.Identifier  uav_search_state.hpp
output/: README.md  exp1_independent_log.csv  exp2_partitioned_log.csv  exp3_shared_log.csv  exp4a_alpha_low_log.csv  exp4b_alpha_high_log.csv  multi_uav_log.csv  multi_uav_shared_log.csv  shared_log.csv  uav_log.csv
